fixed: charts not showing on resize window

--- a/src/components/AppComponent/AppComponent.scss
+++ b/src/components/AppComponent/AppComponent.scss
@@ -18,7 +18,7 @@ body{
 .menu{
     color: white;
     background-color: $quaternary-color;
-    
+
     @media screen and (min-width: $large-device) {
         min-width: 160px;
     }
@@ -31,5 +31,7 @@ body{
 
 
 .content{
-    background-color: white}
+    background-color: white;
+    width: calc(100% - 160px);
+}
 
